# Protocol

./: LICENSE  README.md
MaterioFull/: package-lock.json
consumer-nanogrid/: index.js  package-lock.json  package.json
ioen-app/: package.json
ioen-protocol/: README.md  package-lock.json  package.json
ioen-protocol-client/: index.js  package-lock.json  package.json
ioen-protocol-socket/: package-lock.json  package.json  server.js
ioen-protocol/dnas/billing/workdir/: dna.yaml
ioen-protocol/dnas/energy/coordinator_zomes/transactions/: Cargo.toml
ioen-protocol/dnas/energy/coordinator_zomes/transactions/src/: eco_grid_transaction.rs  lib.rs  retail_transaction.rs
ioen-protocol/dnas/nanogrid/coordinator_zomes/settings/: Cargo.toml
ioen-protocol/dnas/nanogrid/coordinator_zomes/settings/src/: lib.rs  nanogrid.rs
ioen-protocol/tests/: package.json
ioen-protocol/tests/src/: index.ts  utils.ts
ioen-protocol/ui/: package.json
ioen-protocol/ui/src/: App.vue
ioen-protocol/workdir/: happ.yaml  web-happ.yaml
ioen-world-protocol-socket/: package-lock.json  server.js
ioen-world-protocol-socket-holochain/: package.json  server.js
ioen-world-protocol-socket-sqllite3/: .gitignore  package-lock.json  package.json  server.js
markdown/: backyard-bbq.md  digest-logger.md  digest-transactions.md  ecogrid-logger.md  ecogrid-transactions.md  entity-realtionships.md  nanogrid-sockets.md  reconcile-power.md  sovereign-prosperity.md
tesla-gateway-client/: index.js  package-lock.json  package.json
tesla-gateway-nanogrid/: .gitignore  index.js  package-lock.json
(+52 files in other folders)
