[package]
edition = "2021"
name = "transactions"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "transactions"

[dependencies]
serde = "=1.0.136"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
transactions_integrity = { path = "../../integrity_zomes/transactions_integrity" }

hdk = "0.0.148"
